--- a/français/temps de l'innoncence 2/cours.tex
+++ b/français/temps de l'innoncence 2/cours.tex
@@ -79,7 +79,7 @@ Wharton dira d'Archer qu'il est passé à côté de "la fleur de la vie" (l'épa
 
 Cette conspiration apparâit lors du dîner d'adieu d'Ellen. Le camp Mingott-Welland organise se dîner pour maintenir les apparencese et se préserver. Archer y va en s'imaginant que tout n'est peut-être pas perdu, "qu'il n'a pas encore perdu toutes ses chances". Voir p.299 (bas)et 300. On assiste à la mutilation à la société d'Ellen Olenska.
 
-Il y a une communauté masculine et une communité féminine, bien soudée. On l'a vu avec cette société des hommes au début, et on le voit par le fait que May prévienne sa mère et sa grand-mère avant de prévenir son mari.
+Il y a une communauté masculine et une communauté féminine, bien soudée. On l'a vu avec cette société des hommes au début, et on le voit par le fait que May prévienne sa mère et sa grand-mère avant de prévenir son mari.
 
 
 
