--- a/Informatique spé/C11/cours.tex
+++ b/Informatique spé/C11/cours.tex
@@ -9,6 +9,8 @@
 \section{Classes de complexité pour un problème de décision}
 \subsection{Complexité}
 
+\newcommand{\pbm}[]{\mc{P}}
+
 \begin{definition}{}{}
     Soit $\mc{P}$ un problème abstrait défini par une fonction $f:I\to S$. On considère un algorithme $\mc{A}$ "abstrait" qui le résout.\\
     On y associe un problème \notion{concret} en imposant des choix sur \notion{l'encodage} des entrées et des sorties.\\
